--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,28 @@
-<h1>
-  {{title}} 111111
-</h1>
+<h1 class="widget__title">Отель-погода-виджет!</h1>
+
+
+<div class="widget__wrp">
+
+  <div class="widget__left-col">
+
+    <div class="hotel__name">
+      <img src="/assets/images/1.jpg">
+      <h1>{{getCurrentHotel()?.name}}</h1>
+    </div>
+
+    <app-widget-list [hotels]="hotelsList" (listItemClicks)="setCurrentHotel($event)"></app-widget-list>
+  </div>
+
+  <div class="widget__right-col">
+    <app-widget-weather [weather]="getCurrentHotel()?.weather"></app-widget-weather>
+    <app-widget-follow [follow]="getCurrentHotel()?.follow"></app-widget-follow>
+  </div>
+
+  <div class="clear"></div>
+
+</div>
+
+
+<div class="copyright">
+  <p>© 2015 Hot Weather Widget. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
+</div>
