--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="widget__left-col">
 
     <div class="hotel__name">
-      <img src="/assets/images/1.jpg">
+      <img src="assets/images/1.jpg">
       <h1>{{getCurrentHotel()?.name}}</h1>
     </div>
 
