--- a/src/app/widget-follow/widget-follow.component.html
+++ b/src/app/widget-follow/widget-follow.component.html
@@ -3,7 +3,7 @@
   <div class="follow__text">
     <h4>Хвастаем фолловерами</h4>
     <span class="w-line"></span>
-    <img src="/assets/images/b1.jpg" alt="" />
+    <img src="assets/images/b1.jpg" alt="" />
   </div>
 
   <div class="follow__counter">
