fix path in css

--- a/src/app/widget-list/widget-list.component.css
+++ b/src/app/widget-list/widget-list.component.css
@@ -49,7 +49,7 @@
 }
 
 :host .list__content .line {
-    background: url(/assets/images/line.png) no-repeat;
+    background: url(assets/images/line.png) no-repeat;
     width: 103px;
     height: 2px;
     display: block;
