--- a/src/app/widget-weather/widget-weather.component.css
+++ b/src/app/widget-weather/widget-weather.component.css
@@ -33,7 +33,7 @@
 }
 
 :host .weather__wrp .cloud {
-    background: url(/assets/images/cloudy.png)no-repeat;
+    background: url(assets/images/cloudy.png)no-repeat;
     width: 50px;
     height: 50px;
     display: inline-block;
